# lasauce

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_and_refresh_tokens.py  0002_categories_items_images.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  categories.py  health.py  items.py
backend/app/core/: config.py  email.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  seed.py  session.py  types.py
backend/app/ml/: __init__.py
backend/app/models/: __init__.py  category.py  item.py  item_image.py  refresh_token.py  user.py
backend/app/repositories/: base.py  category.py  item.py  refresh_token.py  user.py
backend/app/schemas/: auth.py  category.py  health.py  item.py  user.py
backend/app/services/: __init__.py  auth_service.py  category_service.py  item_service.py
backend/app/workers/: main.py
backend/tests/: conftest.py  test_auth_routes.py  test_health.py  test_item_schemas.py  test_items_integration.py  test_items_routes.py  test_security.py
docs/: ai-matching.md  api.md  architecture.md  database.md  deployment.md  frontend-architecture.md  roadmap.md
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/animations/: card.ts  index.ts  list.ts  modal.ts  (+1 more)
infra/postgres/: init.sql
(+113 files in other folders)
