[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lostfound-api"
version = "0.1.0"
description = "AI-Powered Lost & Found Platform — backend API and worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "SQLAlchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "pgvector>=0.3.6",
    "PyJWT>=2.10",
    "argon2-cffi>=23.1",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "A"]
ignore = [
    "B008",   # FastAPI uses function calls (Depends/Query) in argument defaults
    "UP017",  # keep datetime.timezone.utc (datetime.UTC is 3.11+; dev interpreter may be 3.10)
]
